src/test/deca/context/valid/created/redeclaration.deca
class A {
	int getX() {
	}
}
class B extends A{
	int getX(){
	}
}
