src/test/deca/context/invalid/created/double-def-method.deca
class A{
	void getX(){
	}
	void getX(){
	}
}